test/files/neg/wellkinded_app2.scala
// test well-kindedness checks
class WellKinded[s <: Throwable] {
      val foo: s[Int]
}
